# ITI_Embedded_ARM_Playground

./: README.md
APP/: CMakeLists.txt
APP/kishk/: kishk_startup.c
APP/linker_script/: linker.ld
APP/linker_script/trial/: kishk.ld
APP/src/: main.c
APP/startup/: startup.c  system_stm32f4xx.c
COTS/: convert-to-hex-plus-flash.cmake
COTS/HAL/HLED/: CMakeLists.txt
COTS/HAL/HLED/inc/: HLED.h  HLED_LCFG.h
COTS/HAL/HLED/src/: HLED.c  HLED_LCFG.c
COTS/HAL/HUSART/inc/: HUSART.h  HUSART_LCFG.h
COTS/HAL/HUSART/src/: HUSART.c  HUSART_LCFG.c
COTS/LINKER_SCRIPT/: linker.ld
COTS/MCAL/GPIO/: CMakeLists.txt
COTS/MCAL/GPIO/inc/: GPIO.h  GPIO_Reg.h
COTS/MCAL/GPIO/src/: GPIO.c
COTS/MCAL/MDMA/inc/: DMA.h
COTS/MCAL/MDMA/inc/reg/: DMA_Reg.h
COTS/MCAL/MDMA/src/: DMA.c
COTS/MCAL/MFLASH/inc/: FLASH.h
COTS/MCAL/MFLASH/inc/reg/: FLASH_Reg.h
COTS/MCAL/MFLASH/src/: FLASH.c
COTS/MCAL/MGPIO/: CMakeLists.txt
COTS/MCAL/MGPIO/inc/: GPIO.h
COTS/MCAL/MGPIO/inc/reg/: GPIO_Reg.h
COTS/MCAL/MGPIO/src/: GPIO.c
COTS/MCAL/MNVIC/: CMakeLists.txt
COTS/MCAL/MNVIC/inc/: NVIC.h
COTS/MCAL/MNVIC/inc/reg/: NVIC_Reg.h
COTS/MCAL/MNVIC/src/: NVIC.c
COTS/MCAL/MRCC/: CMakeLists.txt
COTS/MCAL/MRCC/inc/: RCC.h  RCC_PBCFG.h
COTS/MCAL/MRCC/inc/reg/: RCC_Reg.h
COTS/MCAL/MRCC/src/: RCC.c
COTS/MCAL/MSYSTICK/: CMakeLists.txt
COTS/MCAL/MSYSTICK/inc/: SYSTICK.h
COTS/MCAL/MSYSTICK/src/: SYSTICK.c
COTS/MCAL/MUSART/inc/: USART.h
COTS/MCAL/MUSART/inc/reg/: USART_Reg.h
COTS/MCAL/MUSART/src/: USART.c
COTS/MCAL/PORT/inc/: PORT.h
COTS/MCAL/RCC/: CMakeLists.txt
COTS/MCAL/RCC/inc/: RCC.h  RCC_PBCFG.h
COTS/MCAL/RCC/inc/reg/: RCC_Reg.h
COTS/MCAL/RCC/src/: RCC.c
COTS/SERVICES/: error_status.h
COTS/STARTUP_LD/: startup.c
COTS/STD_LIB/: std_types.h
COTS/STD_LIB/std/: std_lib.c  std_lib.h
FLASH_SCRIPT/: convert-to-hex-plus-flash.cmake
FLASH_TOOL/: st-flash.cmake
MCU_PARAM/: stm32f401cc.cmake
OCD/: ocd.cmake
Prescaler_Calc/: stm32f401cc_prescalers.py
RCC_concept/RCC/inc/: RCC.h
TOOLCHAIN/: gcc-arm-none-eabi.cmake
